--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -25,7 +25,7 @@
 	<button class="new-game">Новая игра</button>
 
 
-	<script src="app.js"></script>
+	<script src="app-tictactoe.js"></script>
 </body>
 
 </html>
