--- a/games/dinorun.html
+++ b/games/dinorun.html
@@ -5,11 +5,65 @@
         <meta name="viewport" content="width=device-width, initial scale=1.0">
         <link rel="stylesheet" href="stylez.css">
     </head>
+    <style>
+        .game{
+    width: 600px;
+    height: 200px;
+    border-block: 1px solid black ;
+    margin: auto;
+}
+#dino{
+    width: 50px;
+    height: 50px;
+    background-image: url(dino2.png);
+    background-size: 50px 50px;
+    position: relative;
+    top: 150px;
+}
+#cactus{
+    width: 20px;
+    height: 40px;
+    background-image: url(cactus.png);
+    background-size: 20px 40px;
+    position: relative;
+    top: 110px;
+    left: 580px;
+    animation: cactusMov 1s infinite linear;
+}
+@keyframes cactusMov{
+    0%{
+        left: 580;
+    }
+    100%{
+        left: -20px;
+    }
+}
+.jump{
+    animation: jump 1s linear;
+}
+@keyframes jump{
+    0%{
+        top: 150px;
+    }
+    30%{
+        top: 130px;
+    }
+    50%{
+        top: 80px;
+    }
+    80%{
+        top: 130px;
+    }
+    100%{
+        top: 150px;
+    }
+}
+    </style>
     <body>
         <div class="game">
             <div id="dino"></div>
             <div id="cactus"></div>
         </div>
-        <script src="app.js"></script>
+        <script></script>
     </body>
 </html>
