--- a/games/dinorun.html
+++ b/games/dinorun.html
@@ -64,6 +64,18 @@
             <div id="dino"></div>
             <div id="cactus"></div>
         </div>
-        <script></script>
+        <script>
+            const dino = document.getElementById("dino");
+const cactus = document.getElementById("cactus");
+
+document.addEventListener("keydown", function(event) {
+    jump();
+});
+
+function jump ( ) {
+    dino.classList.add("jump")
+}
+
+        </script>
     </body>
 </html>
