--- a/games/dinorun.html
+++ b/games/dinorun.html
@@ -15,7 +15,7 @@
 #dino{
     width: 50px;
     height: 50px;
-    background-image: url(dino2.png);
+    background-image: url(videos/dino2.png);
     background-size: 50px 50px;
     position: relative;
     top: 150px;
@@ -23,7 +23,7 @@
 #cactus{
     width: 20px;
     height: 40px;
-    background-image: url(cactus.png);
+    background-image: url(videos/cactus.png);
     background-size: 20px 40px;
     position: relative;
     top: 110px;
@@ -39,7 +39,7 @@
     }
 }
 .jump{
-    animation: jump 1s linear;
+    animation: jump 0.5s linear;
 }
 @keyframes jump{
     0%{
@@ -73,8 +73,22 @@ document.addEventListener("keydown", function(event) {
 });
 
 function jump ( ) {
+   if (dino.classList != "jump"){
     dino.classList.add("jump")
+   }
+   setTimeout(function() {
+    dino.classList.remove("jump")
+   }, 300)
 }
+let isAlive =setInterval (function (){
+    let dinoTop = parsInt(window.getComputedStyle(dino).getPropertyValue("top"));
+    let cactusLeft = parsInt(window.getComputedStyle(cactus).getPropertyValue("left"));
+
+    if (cactusLeft < 50 && cactusLeft > 0 && dinoTop >= 140){
+        alert("Game Over!")
+    }
+}, 10)
+
 
         </script>
     </body>
