--- a/games/dinorun.html
+++ b/games/dinorun.html
@@ -15,7 +15,7 @@
 #dino{
     width: 50px;
     height: 50px;
-    background-image: url(videos/dino2.png);
+    background-image: url(dino2.png);
     background-size: 50px 50px;
     position: relative;
     top: 150px;
@@ -23,7 +23,7 @@
 #cactus{
     width: 20px;
     height: 40px;
-    background-image: url(videos/cactus.png);
+    background-image: url(cactus.png);
     background-size: 20px 40px;
     position: relative;
     top: 110px;
