--- a/games/dinorun.html
+++ b/games/dinorun.html
@@ -6,12 +6,14 @@
     <title>Dino Game - WEB IT Team</title>
     <style>
         .game {
-            width: 600px;
+            width: 100%;
+            max-width: 600px;
             height: 200px;
             border: 1px solid black;
             margin: auto;
             position: relative;
             overflow: hidden;
+            background-color: #f0f0f0;
         }
         #dino {
             width: 50px;
@@ -41,7 +43,7 @@
             }
         }
         .jump {
-            animation: jump 0.3s linear;
+            animation: jump 0.5s linear;
         }
         @keyframes jump {
             0% {
@@ -60,9 +62,17 @@
                 top: 150px;
             }
         }
+        #scoreboard {
+            text-align: center;
+            margin: 20px;
+            font-size: 20px;
+        }
     </style>
 </head>
 <body>
+    <div id="scoreboard">
+        Time: <span id="time">0</span> sec | Best Time: <span id="best-time">0</span> sec
+    </div>
     <div class="game">
         <div id="dino"></div>
         <div id="cactus"></div>
@@ -70,8 +80,25 @@
     <script>
         const dino = document.getElementById("dino");
         const cactus = document.getElementById("cactus");
+        const timeElement = document.getElementById("time");
+        const bestTimeElement = document.getElementById("best-time");
 
+        let time = 0;
+        let bestTime = localStorage.getItem("bestTime") || 0;
+        bestTimeElement.textContent = bestTime;
+
+        let timeInterval = setInterval(function() {
+            time++;
+            timeElement.textContent = time;
+        }, 1000);
+
+        // Обработка нажатия на клавишу
         document.addEventListener("keydown", function(event) {
+            jump();
+        });
+
+        // Обработка касания динозаврика
+        dino.addEventListener("touchstart", function(event) {
             jump();
         });
 
@@ -90,13 +117,21 @@
 
             if (cactusLeft < 70 && cactusLeft > 50 && dinoTop >= 140) {
                 clearInterval(isAlive);
+                clearInterval(timeInterval);
                 cactus.style.animation = "none";
                 cactus.style.left = `${cactusLeft}px`;
-                setTimeout(function() {
-                    if (confirm("Game Over! Do you want to play again?")) {
-                        location.reload();
-                    }
-                }, 10);
+
+                if (time > bestTime) {
+                    localStorage.setItem("bestTime", time);
+                    bestTimeElement.textContent = time;
+                    alert(`Game Over! New record: ${time} seconds! Do you want to play again?`);
+                } else {
+                    alert(`Game Over! Your time: ${time} seconds. Do you want to play again?`);
+                }
+                
+                if (confirm("Play again?")) {
+                    location.reload();
+                }
             }
         }, 10);
     </script>
