--- a/games/snake.html
+++ b/games/snake.html
@@ -19,10 +19,10 @@
 const ctx = canvas.getContext("2d");
 
 const ground = new Image();
-ground.src = "img/ground.png";
+ground.src = "ground.png";
 
 const foodImg = new Image();
-foodImg.src = "img/food.png";
+foodImg.src = "food.png";
 
 let box = 32;
 
