make mobile version

--- a/apps/todoapp.html
+++ b/apps/todoapp.html
@@ -112,6 +112,38 @@
         li button:hover {
             color: #c82333;
         }
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 28px;
+    }
+
+    .todo-container {
+        width: 90%; 
+        padding: 15px;
+    }
+
+    input[type="text"] {
+        width: 70%; 
+        padding: 8px;
+        font-size: 14px;
+    }
+
+    button {
+        padding: 8px 12px;
+        font-size: 14px;
+    }
+
+    li {
+        padding: 12px; 
+        font-size: 14px;
+    }
+
+    li button {
+        font-size: 14px; 
+    }
+}
+
     </style>
 </head>
 <body>
