--- a/games/guessthenumber.html
+++ b/games/guessthenumber.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Угадай число</title>
+    <title>Guess The Number - WEB IT Team</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -89,7 +89,7 @@
             attempts = 0;
             document.getElementById('guessInput').value = '';
             document.getElementById('message').textContent = '';
-        }, 5000); // Игра перезапустится через 5 секунд
+        }, 5000); 
     }
 </script>
 
