change styles for links

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
         .dropdown-content a:hover {
             color: #0056b3;
         }
+        a{
+            text-decoration: none;
+            color: blue;
 
        
         @media (max-width: 768px) {
