--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         
         body {
-            background-color: #f4f4f4;
+            background-color: blue
             color: #333;
             display: flex;
             flex-direction: column;
@@ -31,7 +31,7 @@
             padding: 20px;
             background-color: #000;
             text-align: center;
-            color: #fff;
+            color: black;
             font-size: 24px;
         }
 
@@ -72,8 +72,8 @@
         }
 
         .dropdown {
-            background-color: #000;
-            color: #fff;
+            background-color: blue;
+            color: black;
             padding: 15px;
             cursor: pointer;
             border-radius: 5px;
