--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         header {
             width: 100%;
             padding: 20px;
-            background-color: #000;
+            background-color: lightblue;
             text-align: center;
             color: black;
             font-size: 24px;
@@ -51,7 +51,7 @@
             color: #fff;
             padding: 30px;
             border-radius: 10px;
-            display: flex;
+            display: flex;    <link rel="shortcut icon" href="/games/DALL·E 2024-08-15 09.50.25 - A minimalist logo design for a team called 'WEB IT Team' that creates web applications and web games like Snake, Tic-Tac-Toe, and web browsers. The lo.webp
             justify-content: center;
             align-items: center;
             text-align: center;
@@ -72,7 +72,7 @@
         }
 
         .dropdown {
-            background-color: blue;
+            background-color: lightblue;
             color: black;
             padding: 15px;
             cursor: pointer;
