--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         }
 
         .dropdown:hover {
-            background-color: #333;
+            background-color: blue;
         }
 
         .dropdown-content {
