--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         }
 
         .project {
-            background-color: #007BFF;
+            background-color: lightblue;
             color: #fff;
             padding: 30px;
             border-radius: 10px;
-            display: flex;    <link rel="shortcut icon" href="/games/DALL·E 2024-08-15 09.50.25 - A minimalist logo design for a team called 'WEB IT Team' that creates web applications and web games like Snake, Tic-Tac-Toe, and web browsers. The lo.webp
+            display: flex;    
             justify-content: center;
             align-items: center;
             text-align: center;
