--- a/apps/stopwatch.html
+++ b/apps/stopwatch.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stopwatch</title>
-       <link rel="shortcut icon" href="/games/DALL·E 2024-08-15 09.50.25 - A minimalist logo design for a team called 'WEB IT Team' that creates web applications and web games like Snake, Tic-Tac-Toe, and web browsers. The lo.webp
     <style>
         *,
         *::before,
@@ -130,18 +129,20 @@
     <div class="container">
         <div class="timer-display">
             <div class="time-segment">
-                <div id="hours">00:</div>
+                <div id="hours">00</div>
+                <span>Часы</span>
             </div>
             <div class="time-segment">
-                <div id="minutes">00:</div>
+                <div id="minutes">00</div>
+                <span>Минуты</span>
             </div>
             <div class="time-segment">
-                <div id="seconds">00:</div>
-
+                <div id="seconds">00</div>
+                <span>Секунды</span>
             </div>
             <div class="time-segment">
                 <div id="milliseconds">000</div>
-
+                <span>Миллисекунды</span>
             </div>
         </div>
         <div class="buttons">
