--- a/apps/amandasearch.html
+++ b/apps/amandasearch.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amanda Search Engine</title>
-    <link rel="shortcut icon" href="Снимок экрана от 2024-06-02 10-11-05.png">
+    <link rel="shortcut icon" href="/imgonline-com-ua-Resize-nuZSY3h3RJIq.jpg">
     <!-- Подключаем Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="manifest" href="manifest.json">
@@ -108,7 +108,7 @@
 </head>
 <body>
 
-    <img class="imgl" src="Снимок экрана от 2024-05-24 09-46-24.png">
+    <img class="imgl" src="/imgonline-com-ua-Resize-nuZSY3h3RJIq.jpg">
 
     <div id="input" style="align-items: center; justify-content: center; text-align: center;">
         <form id="search-container" onsubmit="search(event)">
