--- a/apps/todoapp.html
+++ b/apps/todoapp.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App - WEB IT Team</title>
+    <link rel="shortcut icon" href="games
+/DALL·E 2024-08-15 09.50.25 - A minimalist logo design for a team called 'WEB IT Team' that creates web applications and web games like Snake, Tic-Tac-Toe, and web browsers. The lo.webp">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="/games/DALL·E 2024-08-15 09.50.25 - A minimalist logo design for a team called 'WEB IT Team' that creates web applications and web games like Snake, Tic-Tac-Toe, and web browsers. The lo.webp
-">
+    <style>
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #f5f5f5;
@@ -27,6 +28,39 @@
             padding: 20px;
             width: 400px;
         }
+        /* Обычные стили остаются без изменений */
+
+@media (max-width: 600px) {
+    h1 {
+        font-size: 28px;
+    }
+
+    .todo-container {
+        width: 90%; /* Увеличиваем ширину контейнера для мобильных устройств */
+        padding: 15px;
+    }
+
+    input[type="text"] {
+        width: 70%; /* Уменьшаем ширину поля ввода на мобильных устройствах */
+        padding: 8px;
+        font-size: 14px;
+    }
+
+    button {
+        padding: 8px 12px; /* Уменьшаем размер кнопок */
+        font-size: 14px;
+    }
+
+    li {
+        padding: 12px; /* Уменьшаем внутренние отступы для элементов списка */
+        font-size: 14px;
+    }
+
+    li button {
+        font-size: 14px; /* Уменьшаем размер кнопок удаления */
+    }
+}
+
 
         .todo-header {
             display: flex;
@@ -113,38 +147,6 @@
         li button:hover {
             color: #c82333;
         }
-
-@media (max-width: 600px) {
-    h1 {
-        font-size: 28px;
-    }
-
-    .todo-container {
-        width: 90%; 
-        padding: 15px;
-    }
-
-    input[type="text"] {
-        width: 70%; 
-        padding: 8px;
-        font-size: 14px;
-    }
-
-    button {
-        padding: 8px 12px;
-        font-size: 14px;
-    }
-
-    li {
-        padding: 12px; 
-        font-size: 14px;
-    }
-
-    li button {
-        font-size: 14px; 
-    }
-}
-
     </style>
 </head>
 <body>
