--- a/apps/todoapp.html
+++ b/apps/todoapp.html
@@ -166,6 +166,13 @@
     document.addEventListener("DOMContentLoaded", () => {
         todos = JSON.parse(localStorage.getItem('todos')) || [];
         renderTodos();
+
+        // Добавляем обработчик для нажатия клавиши Enter
+        document.getElementById('todoInput').addEventListener('keydown', function(event) {
+            if (event.key === 'Enter') {
+                addTodo();
+            }
+        });
     });
 
     function addTodo() {
@@ -210,6 +217,7 @@
         });
     }
 </script>
+
 
 </body>
 </html>
