--- a/games/guessthenumber.html
+++ b/games/guessthenumber.html
@@ -66,6 +66,13 @@
     let randomNumber = Math.floor(Math.random() * 100) + 1;
     let attempts = 0;
 
+    // Добавляем обработчик события keydown
+    document.getElementById('guessInput').addEventListener('keydown', function(event) {
+        if (event.key === 'Enter') {
+            checkGuess();
+        }
+    });
+
     function checkGuess() {
         const userGuess = Number(document.getElementById('guessInput').value);
         const message = document.getElementById('message');
