update mobile version and make all elements in center

--- a/apps/noteapp.html
+++ b/apps/noteapp.html
@@ -12,7 +12,9 @@
             padding: 20px;
             display: flex;
             flex-direction: column;
+            justify-content: center;
             align-items: center;
+            min-height: 100vh;
         }
 
         h1 {
@@ -54,10 +56,13 @@
             width: 100%;
             max-width: 800px;
             margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
         }
 
         .search-bar input {
             width: 100%;
+            max-width: 800px;
             padding: 10px;
             font-size: 16px;
             border-radius: 5px;
@@ -72,7 +77,6 @@
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
-            display: none;
         }
 
         .note-editor input, .note-editor textarea {
@@ -145,7 +149,14 @@
             }
 
             .note-list li .note-text {
-                max-width: 200px;
+                max-width: 100%;
+            }
+
+            .note-editor,
+            .note-view,
+            .search-bar,
+            h1 {
+                padding: 10px;
             }
         }
     </style>
