--- a/apps/noteapp.html
+++ b/apps/noteapp.html
@@ -203,6 +203,15 @@
         const noteView = document.querySelector('.note-view');
         const searchInput = document.getElementById('searchInput');
 
+        // Загрузка заметок из localStorage
+        document.addEventListener('DOMContentLoaded', () => {
+            const storedNotes = localStorage.getItem('notes');
+            if (storedNotes) {
+                notes = JSON.parse(storedNotes);
+            }
+            renderNotes();
+        });
+
         searchInput.addEventListener('input', renderNotes);
 
         function createNewNote() {
@@ -231,12 +240,14 @@
                 note.text = noteText;
             }
 
+            saveNotesToLocalStorage();
             noteEditor.style.display = 'none';
             renderNotes();
         }
 
         function deleteNote(id) {
             notes = notes.filter(note => note.id !== id);
+            saveNotesToLocalStorage();
             renderNotes();
         }
 
@@ -274,6 +285,10 @@
 
             noteEditor.style.display = 'none';
             noteView.style.display = 'none';
+        }
+
+        function saveNotesToLocalStorage() {
+            localStorage.setItem('notes', JSON.stringify(notes));
         }
 
         renderNotes();
