--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         <div class="project"><a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/dinorun">Dino Game</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/guessthenumber">Угадай Число</a></div>
+        <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
     </div>
 
     
@@ -157,6 +158,7 @@
             <a href="https://webiteam.github.io/games/dinorun">Dino Game (идея Евгения)</a>
             <a href="https://webiteam.github.io/apps/amandasearch">Веб-Браузер Amanda</a>
             <a href="https://webiteam.github.io/games/guessthenumber">Угадай число</a>
+            <a href="https://webiteam.github.io/apps/noteapp">NoteApp</a>
            
         </div>
 
