--- a/apps/noteapp.html
+++ b/apps/noteapp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NoteApp</title>
-    <link rel="shortcut icon" href="/DALL·E 2024-08-20 14.25.38 - A minimalist logo for a note-taking app called 'NoteApp'. The design is clean and simple, featuring an abstract, stylized notepad or paper icon with a.webp">
+    <link rel="shortcut icon" href="DALL·E 2024-08-15 09.50.25 - A minimalist logo design for a team called 'WEB IT Team' that creates web applications and web games like Snake, Tic-Tac-Toe, and web browsers. The lo.webp">
     <style>
         body {
             font-family: Arial, sans-serif;
