change link to the new project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         
         body {
-            background-color: blue;
+
             color: #333;
             display: flex;
             flex-direction: column;
@@ -148,7 +148,7 @@
         <div class="project"><a href="https://webiteam.github.io/games/dinorun">Dino Game</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/guessthenumber">Угадай Число</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
-        <div class="project"><a href="https://webiteam.github.io/apps/timer">Веб-Браузер Amanda</a></div>
+        <div class="project"><a href="https://webiteam.github.io/apps/timer">Таймер</a></div>
     </div>
 
     
