add one more new project

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
         <div class="project"><a href="https://webiteam.github.io/games/guessthenumber">Угадай Число</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/noteapp">NoteApp</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/timer">Таймер</a></div>
+        <div class="project"><a href="https://webiteam.github.io/apps/quotegenerator">Генератор Цитат</a></div>
     </div>
 
     
