change link to amanda

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
   
     <div class="projects-grid">
-        <div class="project"><a href="https://webiteam.github.io/apps/amandasearch">Веб-Браузер Amanda</a></div>
+        <div class="project"><a href="https://maxkranz.github.io/amandagl">Веб-Браузер Amanda</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/stopwatch">Секундомер</a></div>
         <div class="project"><a href="https://webiteam.github.io/apps/todoapp">To Do App</a></div>
         <div class="project"><a href="https://webiteam.github.io/games/tictactoe">Крестики-Нолики</a></div>
